--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.1",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
+    "@ng-select/ng-select": "^7.2.0",
     "bootstrap": "^5.0.2",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
